--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
     <h4>Search for a City:</h4>
 
     <div class="row">
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="container">
                 <form class="example" action="action_page.php">
                     <input id="city-name" type="text" placeholder="Search..." name="search">
                     <button type="submit" id="city-search"><i class="fa fa-search"></i></button>
                 </form>
-                <ul id="list"></ul>
+                <ul class="list-group" id="list">
+                    <li class="list-group-item"></li>
+                </ul>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
             <!-- div for city, temp, humidity, wind speed, uvi-->
-            <div id="city-stats"></div>
+            <div>
+                <div class="city-stats" id="uv-index"></div>
+            </div>
         </div>
     </div>
 
-    
+
     <div id="five-days">
-        <div class= "row">
-            <div class="col-2">
+        <div class="row">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <h4>5-Day Forecast:</h4>
             </div>
-            <div class="col-2">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <ul id="day1"></ul>
             </div>
-            <div class= "col-2">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <ul id="day2"></ul>
             </div>
-            <div class= "col-2">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <ul id="day3"></ul>
             </div>
-            <div class= "col-2">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <ul id="day4"></ul>
             </div>
-            <div class="col-2">
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
                 <ul id="day5"></ul>
             </div>
         </div>
-           
+
     </div>
-
-
-
-
 
 
 
