--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>Weather Dashboard</h1>
     <h4>Search for a City:</h4>
 
+    <!--div for searched cities-->
     <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="container">
@@ -28,6 +29,7 @@
             </div>
         </div>
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
+
             <!-- div for city, temp, humidity, wind speed, uvi-->
             <div>
                 <div class="city-stats" id="uv-index"></div>
